fix: height issues on mobile

--- a/src/app/nl-design-system-overrides.css
+++ b/src/app/nl-design-system-overrides.css
@@ -1,3 +1,8 @@
+/* Set min-block-size to 100svh to better accommodate mobile screen sizes. */
+.utrecht-body  {
+  min-block-size: 100svh !important;
+}
+
 .utrecht-textbox {
   --utrecht-form-control-placeholder-font-style: italic;
 }
